@@ -87,6 +87,7 @@ David Maclean
 David Rees
 Denis Hennessy
 Derek Slager
+Devon C. Miller
 Diane Holt
 dIon Gillard
 Dmitry A. Kuminov
