@@ -374,6 +374,11 @@
     <last>Slager</last>
   </name>
   <name>
+    <first>Devon</first>
+    <middle>C.</middle>
+    <last>Miller</last>
+  </name>
+  <name>
     <first>Diane</first>
     <last>Holt</last>
   </name>
